--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/onwedavid" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://medium.com/@onwecdavid" target="_blank" class="icon brands alt fa-medium"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.linkedin.com/in/davidonwe" target="_blank" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/onwecdavid" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -53,14 +53,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3><a href="#">Diversity and Inclusion in Workspace using Power BI</a></h3>
+									<h3><a href="https://www.novypro.com/project/diversity-and-inclusion-22" target="_blank">Diversity and Inclusion in Workspace using Power BI</a></h3>
 									<p>I employed Power BI for visualization and analysis, alongside Power Query for efficient data cleaning in my project<br />
 										I researched and proposed inclusive promotion criteria, prioritizing performance, experience, and gender diversity.<br />
 										This approach fosters motivation, loyalty, and a welcoming atmosphere while also being a smart business move. I'm keen to share more about my project—let's connect!</p>
 								</header>
-								<a href="#" class="image main"><img src="images/diversity.jpg" alt="" /></a>
+								<a href="https://www.novypro.com/project/diversity-and-inclusion-22" target="_blank" class="image main"><img src="images/diversity.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://www.novypro.com/project/diversity-and-inclusion-22" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -68,92 +68,48 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h3><a href="https://medium.com/@onwecdavid/understanding-chip-purchasing-behavior-insights-from-data-analysis-using-r-4e29408a387a" target="_blank">Understanding Chip Purchasing Behavior: Insights from Data Analysis Using R</a></h3>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://medium.com/@onwecdavid/understanding-chip-purchasing-behavior-insights-from-data-analysis-using-r-4e29408a387a" target="_blank" class="image fit"><img src="images/chips.jpg" alt="Chips image" /></a>
+									<p>Using R programming and various libraries, data was loaded and cleaned, conducted exploratory analysis, and performed data visualization. The goal was to better understand customer segments, their purchasing behavior, and their impact on chip sales.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://medium.com/@onwecdavid/understanding-chip-purchasing-behavior-insights-from-data-analysis-using-r-4e29408a387a" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h3><a href="https://www.canva.com/design/DAFrbuto66c/wsHAwHymbh4C7H9rZvvZqQ/edit?utm_content=DAFrbuto66c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Excel Portfolio <br />
+											Transforming Data into Insights</a></h3>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://www.canva.com/design/DAFrbuto66c/wsHAwHymbh4C7H9rZvvZqQ/edit?utm_content=DAFrbuto66c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="image fit"><img src="images/excel.jpg" alt="" /></a>
+									<p>I've harnessed Excel and Power Query to transform raw data into actionable insights. Whether it's analyzing or dissecting sales trends, I've used these tools to clean, organize, and visualize data effectively. Dynamic dashboards provide real-time snapshots for informed decision-making. My goal is to turn data into powerful insights in the world of data science and beyond.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://www.canva.com/design/DAFrbuto66c/wsHAwHymbh4C7H9rZvvZqQ/edit?utm_content=DAFrbuto66c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h3><a href="https://www.novypro.com/project/contact-centre-service-solution" target="_blank">Contact Centre Solution</a></h3>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://www.novypro.com/project/contact-centre-service-solution" target="_blank" class="image fit"><img src="images/contact.jpg" alt="" /></a>
+									<p>The Power BI dashboard's key stats cover customer satisfaction, call metrics like answered/abandoned, time-based call data, average speed of answering, and agent performance based on talk time and answered calls.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://www.novypro.com/project/contact-centre-service-solution" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h3><a href="https://www.novypro.com/project/customer-retention-21" target="_blank">Customer Retention Analysis</h3>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://www.novypro.com/project/customer-retention-21" target="_blank" class="image fit"><img src="images/retention.jpg" alt="" /></a>
+									<p>Defined KPIs, created a dashboard, and offered suggestions to improve it. Aligned KPIs with client goals and objectives, and emphasized the importance of data-driven metrics for retention strategy success. Excited to contribute to driving the client's business forward.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://www.novypro.com/project/customer-retention-21" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
 
 						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
 
 					</div>
 
@@ -182,25 +138,24 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Location</h3>
+								<p>Lagos, Nigeria</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">+2347031135757</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:onwecdavid@gmail.com" target="_blank">onwecdavid@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/onwedavid" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://medium.com/@onwecdavid" target="_blank" class="icon brands alt fa-medium"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.linkedin.com/in/davidonwe" target="_blank" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/onwecdavid" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
