--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 								</article>
 								<article>
 									<header>
+										<h3><a href="https://github.com/onwecdavid/Comprehensive-Analysis-of-COVID-19-Data-Using-SQL" target="_blank">Comprehensive Analysis of COVID-19 Data Using SQL</a></h3>
+									</header>
+									<a href="https://github.com/onwecdavid/Comprehensive-Analysis-of-COVID-19-Data-Using-SQL" target="_blank" class="image fit"><img src="images/covid.jpg" alt="Covid image" /></a>
+									<p>I analyzed COVID-19 data using SQL, focusing on cases, deaths, and vaccinations. Calculated percentages, identified high-risk countries, and tracked global trends. Leveraged CTEs and views for efficiency. Insights highlighted infection rates and vaccination progress, fueling my passion for impactful data analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/onwecdavid/Comprehensive-Analysis-of-COVID-19-Data-Using-SQL" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h3><a href="https://www.canva.com/design/DAFrbuto66c/wsHAwHymbh4C7H9rZvvZqQ/edit?utm_content=DAFrbuto66c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Excel Portfolio <br />
 											Transforming Data into Insights</a></h3>
 									</header>
