--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 								</article>
 								<article>
 									<header>
+										<h3><a href="https://public.tableau.com/app/profile/onwe.david/viz/UEFAChampionsLeagueProject/Dashboard1?publish=yes" target="_blank">UEFA Champions League Statistics<br /> &nbsp; <br /> &nbsp; </a></h3>
+									</header>
+									<a href="https://public.tableau.com/app/profile/onwe.david/viz/UEFAChampionsLeagueProject/Dashboard1?publish=yes" target="_blank" class="image fit"><img src="images/champions.jpg" alt="champions League image" /></a>
+									<p>I utilized Tableau to conduct an analysis of the UEFA Champions League history since its inception in 1992, highlighting key insights such as the most successful winners, top goal scorers, and other important statistical data.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/onwe.david/viz/UEFAChampionsLeagueProject/Dashboard1?publish=yes" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h3><a href="https://github.com/onwecdavid/Comprehensive-Analysis-of-COVID-19-Data-Using-SQL" target="_blank">Comprehensive Analysis of COVID-19 Data Using SQL</a></h3>
 									</header>
 									<a href="https://github.com/onwecdavid/Comprehensive-Analysis-of-COVID-19-Data-Using-SQL" target="_blank" class="image fit"><img src="images/covid.jpg" alt="Covid image" /></a>
